--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -15,4 +15,4 @@ jobs:
       - uses: actions/checkout@v3.1.0
       - uses: ./.github/actions/pnpm-setup-action
       - name: Build docs
-        run: pnpm nx run synapse-react-client:build:docs
+        run: pnpm nx run synapse-react-client:chromatic
