--- a/.github/workflows/deploy-to-chromatic.yml
+++ b/.github/workflows/deploy-to-chromatic.yml
@@ -31,6 +31,7 @@ jobs:
           exitZeroOnChanges: true
           exitOnceUploaded: true
           autoAcceptChanges: 'main'
+          dryRun: true
   pr-deploy-to-chromatic:
     if: github.event.issue.pull_request && contains(github.event.comment.body, '/chromatic')
     runs-on: ubuntu-latest
@@ -59,7 +60,9 @@ jobs:
           exitOnceUploaded: true
           autoAcceptChanges: 'main'
           repositorySlug: ${{ steps.comment-branch.outputs.head_owner }}/${{ steps.comment-branch.outputs.head_repo }}
-          branchName: ${{ steps.comment-branch.outputs.head_ref }}
+          branchName: ${{ steps.comment-branch.outputs.head_sha }}
+        env:
+          STORYBOOK_GITHUB_SHA: ${{ github.sha }}
       - name: Add comment to PR
         uses: actions/github-script@v6
         if: always()
@@ -69,8 +72,9 @@ jobs:
             const url = '${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}';
             const success = '${{ job.status }}' === 'success';
             let body = `${name}: ${success ? 'succeeded ✅' : 'failed ❌'}\n${url}\n\n`;
-            body += `Open deployed Storybook here: ${{ steps.chromatic-deploy.output.storybookUrl }}\n\n`
-            body += `[View UI tests: ${{ steps.chromatic-deploy.output.changeCount }} / ${{ steps.chromatic-deploy.output.actualCaptureCount }} changed](${{ steps.chromatic-deploy.output.buildUrl }})`
+            body += "| Task | Result |\n|---|---|\n"
+            body += `| Deployed Storybook | ${{ steps.chromatic-deploy.outputs.storybookUrl }} |\n`
+            body += `| Snapshot Tests | [${{ steps.chromatic-deploy.outputs.changeCount }} / ${{ steps.chromatic-deploy.outputs.actualCaptureCount }} changed](${{ steps.chromatic-deploy.outputs.buildUrl }}) |`
 
             await github.rest.issues.createComment({
               issue_number: context.issue.number,
