--- a/packages/synapse-react-client/package.json
+++ b/packages/synapse-react-client/package.json
@@ -142,16 +142,17 @@
     "@juggle/resize-observer": "^3.4.0",
     "@open-draft/deferred-promise": "^2.1.0",
     "@rollup/plugin-inject": "^4.0.4",
-    "@storybook/addon-actions": "^7.5.3",
-    "@storybook/addon-essentials": "^7.5.3",
-    "@storybook/addon-interactions": "^7.5.3",
-    "@storybook/addon-links": "^7.5.3",
+    "@storybook/addon-actions": "^7.6.7",
+    "@storybook/addon-essentials": "^7.6.7",
+    "@storybook/addon-interactions": "^7.6.7",
+    "@storybook/addon-links": "^7.6.7",
     "@storybook/addon-styling": "^1.3.7",
-    "@storybook/manager-api": "^7.5.3",
-    "@storybook/react": "^7.5.3",
-    "@storybook/react-vite": "^7.5.3",
+    "@storybook/blocks": "^7.6.8",
+    "@storybook/manager-api": "^7.6.7",
+    "@storybook/react": "^7.6.7",
+    "@storybook/react-vite": "^7.6.7",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/theming": "^7.5.3",
+    "@storybook/theming": "^7.6.7",
     "@svgr/plugin-jsx": "^8.0.1",
     "@testing-library/dom": "^8.20.1",
     "@testing-library/jest-dom": "^6.1.4",
@@ -225,7 +226,7 @@
     "react-select-event": "^5.5.1",
     "react-test-renderer": "^18.2.0",
     "rollup-plugin-polyfill-node": "^0.10.2",
-    "storybook": "^7.5.3",
+    "storybook": "^7.6.7",
     "storybook-addon-designs": "7.0.0-beta.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
