--- a/packages/synapse-react-client/package.json
+++ b/packages/synapse-react-client/package.json
@@ -49,6 +49,8 @@
     "@rjsf/validator-ajv8": "5.12.1",
     "@sage-bionetworks/react-base-table": "^1.13.4",
     "@sage-bionetworks/synapse-types": "workspace:*",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "@tanstack/react-table": "^8.9.3",
     "@upsetjs/react": "^1.11.0",
     "animate.css": "^4.1.1",
@@ -95,7 +97,6 @@
     "react-measure": "^2.5.2",
     "react-plotly.js": "^2.6.0",
     "react-popper": "^2.3.0",
-    "react-query": "3.39.3",
     "react-reflex": "^4.1.0",
     "react-router-dom": "^5.3.4",
     "react-select": "^5.7.3",
